# furia-fan-insights

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routes/: user.py
backend/app/core/: config.py  db.py
backend/app/crud/: base.py  crud_user.py
backend/app/models/: user.py
notebook/: know_your_fan.ipynb
